--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,12 @@
   },
   "require" : {
     "php": "^7.2",
-    "tasoft/collection": "dev-master"
+    "tasoft/collection": "dev-master",
+    "tasoft/method-signature": "dev-master"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6"
+    "phpunit/phpunit": "^6",
+    "tasoft/service-manager": "dev-master"
   },
   "suggest": {
     "tasoft/service-manager": "dev-master"
