--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
   },
   "require" : {
     "php": "^7.2",
-    "tasoft/collection": "dev-master",
-    "tasoft/method-signature": "dev-master"
+    "tasoft/collection": "^1.0",
+    "tasoft/method-signature": "^0.8"
   },
   "require-dev": {
     "phpunit/phpunit": "^6",
-    "tasoft/service-manager": "dev-master"
+    "tasoft/service-manager": "^2"
   },
   "suggest": {
     "tasoft/service-manager": "dev-master"
