FIX: upgrade to php 8.0

--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,12 @@
     }
   },
   "require" : {
-    "php": "^7.2",
-    "tasoft/collection": "^1.0",
+    "php": ">=7.2",
+    "tasoft/collection": "^1.0|^8",
     "tasoft/method-signature": "^0.8"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6",
+    "phpunit/phpunit": "^9",
     "tasoft/service-manager": "^2"
-  },
-  "suggest": {
-    "tasoft/service-manager": "dev-master"
   }
 }
